Ticker: short hyphen separator, tight loop gap, corrected duration

--- a/src/components/DisplayScreen/DisplayScreen.module.css
+++ b/src/components/DisplayScreen/DisplayScreen.module.css
@@ -255,7 +255,7 @@
   white-space: nowrap;
   flex-shrink: 0;
   /* 100vw gap guarantees copy 2 always starts off-screen right */
-  padding-right: 100vw;
+  padding-right: 2em;
 }
 
 [data-theme='dark'] .tickerBigItem {
